other-stuff/quay-legacy/openshift/quay-enterprise-app-route.yaml
# ---
# apiVersion: v1
# kind: Route
# metadata:
#   name: quay-enterprise
#   namespace: quay-enterprise
# spec:
#   to:
#     kind: Service
#     name: quay-enterprise-clusterip
#   tls:
#     termination: passthrough

# ---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay-enterprise
  namespace: quay-enterprise
spec:
  host: quay.redcloud.land
  to:
    kind: Service
    name: quay-enterprise-clusterip
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    secretName: custom-quay-ssl 
  wildcardPolicy: None
