other-stuff/quay-legacy/openshift/quay-enterprise-config-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay-config
  namespace: quay-enterprise
spec:
  host: quay-config.apps.openshift.redcloud.land
  to:
    kind: Service
    name: quay-enterprise-config
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
